detalle pedido, falta terminar

--- a/Vistas/Administracion/Productos/frmABMSProductos.resx
+++ b/Vistas/Administracion/Productos/frmABMSProductos.resx
@@ -165,4 +165,19 @@
         6v+FMfaaZ1n0WnaISuUf+iyO9C7vIxMAAAAASUVORK5CYII=
 </value>
   </data>
+  <data name="btnSeleccionar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAh1JREFUSEvVl01OFEEYQMcdGElAjbDmR68giC4RgxJPIMIp9AaKFyAKLNkoGFeA
+        SlioBzBIdCeIgQ1r3fpeTU9nmHTPVI2QCS95SdfPVFF/XxWV88ANfIxL+Bl/ZPpt3gxa59S4g2/xCPfx
+        DT7HJ5l+r6Jl1lnD29g2l3EZ/+AGPsBLWIZl02jdv7iItpGEU/YNf+KUGYncxz3cwREzYriOB/gBr5nR
+        Jv24ibbVcu37cBfttMuM/8Q2ttA2bbsU18UpalopwymMmcYr+AtfhlQB4+immAip1rzLjGES3aSjIVXH
+        BfTIrIdUHB4hjcX1tg/7yhnGY0zZwZ5njcXjaB9DIZUxh65Dd0jFkdqx5/w3Gv1yDBSvq5/RpHYsRjXD
+        a84XfFb9jGYlM4V5/FT9rPIdjbuNeFxqI2vUadOiMi06ak/RvnI61nHHptrN5V+ZQm1kKbi5jI45s2gw
+        vxhScaR2XDtOPhhyPNRnHUC8q+1jMKQyDGNOg5d4LKkh8z0W1h9DL4m7IdWalEviHtr2zZAqwKvL0OlV
+        1gqPS9GRaeQq2uZCSJXgPeyT5yOmxO0ybGMbfQL1mtEMR+EOt3OfL+0ygK6ro/U5FYUVHblPVq+zVNzB
+        dvgVY5bjBD5NX6EvBy/xh9iDZVhmHUfpb9wvMU+oUnwSedQO0VF4JAx9tQf9C7TcMutYfgtPDaf/ERry
+        6v+FMfaaZ1n0WnaISuUf+iyO9C7vIxMAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
