--- a/Vistas/Administracion/Proveedores/frmABMSProveedores.resx
+++ b/Vistas/Administracion/Proveedores/frmABMSProveedores.resx
@@ -118,63 +118,77 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnBorrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnSeleccionar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAWBJREFUSEvt1rErhHEcx/EHUbrBJlFmptuVxXILspkssvMPXIxikVkm02WySBkx
-        2Y6dUmRgR3h/6obr1/fx+36friz3qVdX13Pv53ruue6K/jKbxDp2EhuYRuVNYAnLJfbxjJ/EKw5gvUbU
-        VLt0K0ijvaJ26Twn/sZXQs9Zx3b788Tdl1qPveC61P+6YcyigfTdR6mhlprZjaGJJ6SfZZQaaqmZXQ1b
-        eIF1k0SooZaa2Y1gFfewYhFqqKVmdoNYwC2sWIQaaqnpWh1XsGIRaqjl3hQuYcUi1FDLvVGcwYpFqKGW
-        e0M4gRWLUEMt93QzHOITVtDjA2q4byxNB+t39h1W1OMNaoROPIBNPMKKejxADbVCW8MdrKhHG2qEt4gb
-        WFGPa6gR3hwuYEU9zqFGeDM4hRX1aEGN8MZxDCvqcQQ1wtOPt76HVtRD/zpdfwCs7cGKeuyi8uaxXZFe
-        219nRfELfxp++9AV7xcAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAApJJREFUSEtjGNkgpPAYZ0D1NmX/5h2yDKGrmKHC1AXhzQdlQ5v2lYc07SsOqdih
+        AhWmLojtOakW231scULPiSNJPadKkjqPqEOlqAfS+88rZEw9NyNn5uWX+XOvn8mYfL4c4qP/jFAllIPM
+        nlOyWdPPTypfcudTw9rnP4sX3Dqf1HeqJLx6rzJUCeUgtGMVf+rk0z1Vy++/7dn15X/zhlf/C+dfP5Xc
+        e7o4oGKrGlAJqo/SZp5hDa2/wuYxcRs7sTiua69yxpSzU6uW3XvTC7Rk4v6f/xvWPvtZOO/G6eQJp4vD
+        gSkPaDQTxAYgiG3bH5vadzw/Z9q5+uzp55uyp55vwIezppyrz5l2vrdgztWjdaseferZ8fH/pH0//vft
+        +f6/fu2zXyAfJfYeLw6q2KIEtQJoScfBZUBNp8sW3npfvvju59KFtz7gw2ULb74vX3jnY+2Kh19aNr78
+        1b39w3+QRX27v/zv3fX5f92aJ3+L5t04mTb5bFFsxwHN0PpVPAxx3UeWli+6c6Vj63uwazq3fSAOb333
+        v2vb+/8gS+AWAS3p3f31fyMwMRTOu3k6dcLpwvCyXZoM8d3H5taufHhhItDL04/+/z8JGL6EMEjthD3f
+        /vfu/AS3pBtoITjogPJ9e37+L1lw61v6hLNTQqp2mNHEJw1rgHEz98bp1L5T+SH1wPxDsziZeLYosnW/
+        hk/9Ji6qpi6wD+ZdP5Hcd6IQJXVRK5/Ur376q3DO9VMpvScKwuu3KwCNpqyIwcjx61/9L5hz/STIgoCS
+        ddQpWlDKrjXPfhbPv3U2uftEIdQH1AGIUvjSy/zZ105nTj5XElK9UxEoRb1SGLk+Se49WZzQdEAVKkU9
+        QJeakS51/CAEDAwANPrOG4ryWLMAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="brnModificar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="btnBorrar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAnpJREFUSEvN10uIT1EAx/FL3s8hbzYixhQbexsrJIkSUpSNFBYyK7OZrRgs5U3y
-        yiPFyvsR8shjZSsWlJAiz+/3zj23+/+7/tP930t+9Wnm/pvmN/ece849E/2jzMB2LIiv6jIem3EQB7C/
-        gKPwF09BXnbiJ15isR+ETMRFfMFj3MeDAp7hEmYimwmJuXgCy19jPuJswWeswVAMw/ACWjAEvREyHddx
-        Jr6KoiX4Dss7/cAcgnc6ML4qn6m4A0s2oh/CcJ/HJMRxTh1e77RsfJBuw5L16IOu5PosHPo0PiDOlcNW
-        JtNwE5ZsgKXbkuuaOw2potg5tfQT1sHSHbD0AnyAf0vZ4jZcgyU+3WMQ7vQcxsKswrzub7tTpngWrsIS
-        uVzuJt87p2F4XS2P4JpPU6b4CEJplsso+yD54Nrhz6dppngEBsGdyB0pW3oa45CNxffgzpimaLHrfR+O
-        w41jEdz1LD2BmiWTpJLiOfgIi45hK77BOXXPz0slxeGJzTqF+uHNpnRxK14gFL7CbuQNbzali1fAQpdG
-        B2ajF3pK6eLJWJp8LZJK5riZ9IdvrL9e7JJz6xyNkXAHs+Mw0lRdvAyX4Tv+IW4kvmIv0lRZbOl7WGrJ
-        LpyED+Q7LESaqood3ivwLsOadlv197+FK6ImVRU7p0+xJ76KolFwY/mAlX5Qn6qOPj5I3q3nK/dwh9iD
-        ge/h3ITD3oD4qvlYfAu+nVw27ud/LDXt8O2yGoMRjrg9cWqyf6xD65H2B95gORrGNeaRxbO1Q+UJwl2m
-        EafmOfwPwj/WuF59Vhze3DnNi68zD/aeEFzkDlUj/ozv3k0Id90Xa+GS+h8TRb8A0ubPw4w+gAcAAAAA
-        SUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAA3dJREFUSEvtVEtMXFUYZtHULSRdFEXmnnPunaBJrTFpY9IaWzW6EmrAWoqxOwsJ
+        btx1NT4WM/cxl9cwFDB2Y2SlbXRlXLhsumhXXRiJgcvccy9DBxCEIm3h+P1nLiQGGSa4rF9ycu95ff9/
+        vv/R8HQhlZlpFN68w/3Fm8wNb3G/cpP7Za81GzQlR/47mCc/T08qxdw44K6cYW4U6Lkjv0yOHBIZdcTM
+        VVq4I8+A7DZ3o8fcm++GgS5uy27uxZvYu5Ny43NWNuDm0G/PJDdro9mTx5gTTYHsLsiWRL6srLFHyrr+
+        RFnFv1T6K7U7rOIG1reUNb6lhF/BK+UqHLkPh75Le6vHEsq9SDnl4yD/XngLX+PCBC6MQZ4Cs8NhZkfD
+        3AlHuBON0Fp1RIXqmWgSRm5wN/4G/7fa/NnmhPLf8bwdPCuGVj7DpWssF37KcrJfeNHHuHyFZCK5EJt3
+        hSff4W7pDS2nO3fKyJdPWqOrLyQ0tWE48m1rYhsybWqJzNGHyiysK3NkrToKGMOryhxaUWLoj38Mc+RP
+        xe3wzYRqf6Sc8GVI8Fj4D5QYXFJioKLwCj2q80V8l5O1uDonI/hCzm1hy1cSqv2RysYGJFgT+YVt5pa6
+        hCuvk4dEZLjRj9yTZw0n+mHHc8g6jmTphFNbMLxu+QFPqPZHamC5EcFdhFdbNDfz8fsknTm6oXhevkdr
+        kLSDZKTM4254idaYEz6BkaX6CjTzyxHoOsuRvq3FoAlefqhjU3gIr6MuOsKcUifFySpukpErqQHdEVCc
+        UfA66kvzHAR4dZd0b8nPPYdq79k1glfpfci4Y8RwSh+1+QvNFC8YuacJ6gE8/omyiNslC0lwuZYReqnp
+        lIXOLDf6WRPUA1z8lvRmzvxLVBs1jdiyh2XnTlDccG9KE9QDqmxqgKlc6VVhhx/UMoJs62a5+HQatYWs
+        HNUE9QDZlaH+JPLxecMNL9Y0guwSaJL6vC2/0AT1ALnfT5eo+g0vbCcys7ChDH++g/YNL2gno1bxkUJ7
+        ucCy4Vv6vCc/0QT1gIKdntxWzIv68KqrFrUWtBQ9z8lWeN9LgbZQO4hDH7ejXpKL4pNQHAyqaiKotosK
+        +hSqO/lHJ9i7hq826MvXEoqD8WLm/lHUyiAfqEwjnaeRmr/SgNfTeOXv9N1do30650SDdC+h+B+HRUPD
+        30NqlVa8JHrOAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnCrear.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAh1JREFUSEvVl01OFEEYQMcdGElAjbDmR68giC4RgxJPIMIp9AaKFyAKLNkoGFeA
-        SlioBzBIdCeIgQ1r3fpeTU9nmHTPVI2QCS95SdfPVFF/XxWV88ANfIxL+Bl/ZPpt3gxa59S4g2/xCPfx
-        DT7HJ5l+r6Jl1lnD29g2l3EZ/+AGPsBLWIZl02jdv7iItpGEU/YNf+KUGYncxz3cwREzYriOB/gBr5nR
-        Jv24ibbVcu37cBfttMuM/8Q2ttA2bbsU18UpalopwymMmcYr+AtfhlQB4+immAip1rzLjGES3aSjIVXH
-        BfTIrIdUHB4hjcX1tg/7yhnGY0zZwZ5njcXjaB9DIZUxh65Dd0jFkdqx5/w3Gv1yDBSvq5/RpHYsRjXD
-        a84XfFb9jGYlM4V5/FT9rPIdjbuNeFxqI2vUadOiMi06ak/RvnI61nHHptrN5V+ZQm1kKbi5jI45s2gw
-        vxhScaR2XDtOPhhyPNRnHUC8q+1jMKQyDGNOg5d4LKkh8z0W1h9DL4m7IdWalEviHtr2zZAqwKvL0OlV
-        1gqPS9GRaeQq2uZCSJXgPeyT5yOmxO0ybGMbfQL1mtEMR+EOt3OfL+0ygK6ro/U5FYUVHblPVq+zVNzB
-        dvgVY5bjBD5NX6EvBy/xh9iDZVhmHUfpb9wvMU+oUnwSedQO0VF4JAx9tQf9C7TcMutYfgtPDaf/ERry
-        6v+FMfaaZ1n0WnaISuUf+iyO9C7vIxMAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAzZJREFUSEvNVVtPE0EU3l8gPnhJVETR+BO4JDwY9cEnAQMW9IkWLCaG+AQmkCKF
+        +KC24As3rZqY2BZNoIarEC5FjO1CEIhEaCuwZdtyjSIqRNtxPnZW2gaxYhM9ycnJzJ7zfTNzLsv9H3L+
+        WVzKDWt2zr039eqHo+1qw2h3/qOxNuX9kboUrTWLy2w4zDz/XPbktpxIr7RVVTx3zZmHlgjvIeT9KiHu
+        NclibRpcIuVNTl+azq7fpWo/zkIjkyRN36WihonpV7OEeL4SsrBOyCwFFlYImfkoWayx7/lCyAD1KzRP
+        TCUX92QziO3l1M3+a3c7xW8CDfZRBejUh8CGTlN1r0hW3sN3Hz0I/Ku6POsny6wFDGprSSrtvVj5Qgj4
+        6JPgpDKQTOBcDtBnkmwwERT+Xhqn7xD8SSW9FxhkqOy70hl//enkFE40+ymUACrQG4zNB0jtoH/DYh3u
+        g7gZGl9onnTFqNuOMOhNSa/kqwZE6YnCg6EySQ3/axIo4l/SHKXp7XcYNBNFY6y2yTkv0rcNzkGwRnIT
+        KOJRLNpGh4/LMB9kDByXorFmm4eWN6plq0BopCRQ4Jj4JZKs6c9kFBynoo3Ge/0/k42kAiRYxdUAGV+Q
+        SGCxDveRiwE4vOgnqrrhGkbBcehkNBjqX64inDZY31JgmyiRwGId7iNXHXBcFC/fMNbCKCiJYaQbnTxD
+        P6IPUKYAQ5Jhf6eyH+IQDxyB4tER1MUoIrvJ+GLoTbAO99n2Jio67HiPn75zdHICHOREWTtczShodZVa
+        s0xRri4jqqvUmsEoqCiMsVqLYy5afQKcsiaHlzv35ABjkATjGp0alY53E5Kut91i0JuyP9dytKjB4RI+
+        /+XsovF07Dt2K5vjGHSoJBZ3K/Qdbj+m6U6nsK5D+J5Q0hOUiy3kdMVAAf4LuNGf/E9wA32XuHamov8q
+        g9peEjV9ikLzOxdyhCSiWnBS1D9AYbHGvsimLp4oobh3c1ZFInvzWo+l6l/ryi1Or5FfJHb6TGgwTAZY
+        O21IE90vszg9aTrb7Zic5ngWugNJNcZimmLYqR+MtubRUXHZMNKirB+pTtbQk599fIh5/kvhuB9mROET
+        nxnW2AAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnSeleccionar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnModificar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DAAACwwBP0AiyAAAAh1JREFUSEvVl01OFEEYQMcdGElAjbDmR68giC4RgxJPIMIp9AaKFyAKLNkoGFeA
-        SlioBzBIdCeIgQ1r3fpeTU9nmHTPVI2QCS95SdfPVFF/XxWV88ANfIxL+Bl/ZPpt3gxa59S4g2/xCPfx
-        DT7HJ5l+r6Jl1lnD29g2l3EZ/+AGPsBLWIZl02jdv7iItpGEU/YNf+KUGYncxz3cwREzYriOB/gBr5nR
-        Jv24ibbVcu37cBfttMuM/8Q2ttA2bbsU18UpalopwymMmcYr+AtfhlQB4+immAip1rzLjGES3aSjIVXH
-        BfTIrIdUHB4hjcX1tg/7yhnGY0zZwZ5njcXjaB9DIZUxh65Dd0jFkdqx5/w3Gv1yDBSvq5/RpHYsRjXD
-        a84XfFb9jGYlM4V5/FT9rPIdjbuNeFxqI2vUadOiMi06ak/RvnI61nHHptrN5V+ZQm1kKbi5jI45s2gw
-        vxhScaR2XDtOPhhyPNRnHUC8q+1jMKQyDGNOg5d4LKkh8z0W1h9DL4m7IdWalEviHtr2zZAqwKvL0OlV
-        1gqPS9GRaeQq2uZCSJXgPeyT5yOmxO0ybGMbfQL1mtEMR+EOt3OfL+0ygK6ro/U5FYUVHblPVq+zVNzB
-        dvgVY5bjBD5NX6EvBy/xh9iDZVhmHUfpb9wvMU+oUnwSedQO0VF4JAx9tQf9C7TcMutYfgtPDaf/ERry
-        6v+FMfaaZ1n0WnaISuUf+iyO9C7vIxMAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DAAACwwBP0AiyAAAAYFJREFUSEvtlD1PwkAYx6sxho+gJtjeXWVwMH4CXQwO4svg4qfpokIPqRhhIc4m
+        zi7GRPkSLDpIkR4JUALyogMJ51WeYFC3O8PCL2na3v3TX56n7aNNmQg6LS7A5f+AbDdG0q0ypiyrWXwW
+        ltVhUBbFTrVvZno8OHCyktGtYgi21aBTbx07tRfzsv0lQZQ1dFpV0zqUcA+J419rVn4uTJ8JTtWK5Nzv
+        kzN2ABE5UNzdwU69E8nxoD23upUPoZPyGkmwbYjIAYI3ctEKBDySG3Dxwm9gW54xAWWcpJtctKiLbXYE
+        ETmGgsa3IDg7fofES/sQkQMlf1QAAvH5KhKcurG/BOoqEH+y+Afa5kjQHApsbw8icvwWQAWqBEaysoFT
+        9c54BfUusr0YRCQRA06MhseV7PuoAhII4t4uJORB1NsSDx2IkcHN7AcX46JnqGpRwKpVmCeUPUSuOCep
+        WtCie8N+3YRtNSwfu4uYVp5Mx78zaDUKy4rhfCZsl5bgbsok0LRPBrP7b21Lo8gAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
