--- a/Vistas/Deposito/Recepcion/frmAMCDetalleRecepcion.resx
+++ b/Vistas/Deposito/Recepcion/frmAMCDetalleRecepcion.resx
@@ -18,7 +18,7 @@
     <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
     <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing"">Blue</data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
         <value>[base64 mime encoded serialized .NET Framework object]</value>
     </data>
@@ -123,4 +123,48 @@
   <metadata name="fontDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>179, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnAsignarProducto.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAAedJREFUOE9jGDDwn+E/Y2j9KrbQVauYoUKUgZjundxhjXt8A+t3eHjkbmOHCpMP
+        knuPCcV0H+2P6zq+JbHzpA/ItVAp8kB0/Qm+zMnnuvLnXHuXP/vanoTOI14M9vUsUGnSgfHMmaxpU87W
+        VK948K154+s/+XOv7oxsOeiuFUquS+3tWVInnqyuXfHow+RD//43rX/xO3fWlW1RLQc8tbTqEYbGtR8I
+        TO8/mZox+UxBxrRzeRlTTmPiyWeygXRx/syLW+tXP/4yce/3/5P2//pfv+75r7w5l7dHtuxzNzaeyQo2
+        ML7ryMriudfuVC17+K1iyb3PFUvufsKCP1YuvvupFujd1k0v//Ts+Pi/b/eX//1Ag+vWPv2dP+vK1qS+
+        097++esFGBL7TixvWvfi5bSj//9POvDr/4R9P7DjvT/+9+368h9kWPf2D0D8/n/vrs9APb//N659+Ttr
+        2vm1ERU7zaliYP3aF3+yppxfE1G11YR6Xu4+6u2Ru5iPokhpWPvsV+7My1ujmw+6wSOFaICebNYBk82M
+        y1tiGg+4MhinkWgYECAn7CZQwp55bXtU834XY3IMAwFw1pt6ritv1pX3+TOv7ErqOuHGwBBKfsmDXDjE
+        tx/1TksjNczQANWLL6oXsMQBBgYANqTJaQzuSAwAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnConsultarProducto.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAAVdJREFUOE/tk01Kw0AYQOtKXLpVaeen03ajeABXRTyDeAvBlStXppkkbRqatFZc
+        FHShB/Ea0jaTNFrrT9EqtY4JHYiFaALirg8eDJNvHkNgUt9Z279eyqisAGlvA0qd9SRm6M1mXm6viEQI
+        0TqrWX1whasPr0jzJkj1xgn8IOYLhzKzRCYEyt1D0phwbAw5Lt9xXOnHqw947mTCkew0RSYESnaTmG8c
+        Ka6vk0y1x4k54lBxI24oMSv4GAxFHo7ytyAqMXMejHcenOEfg8FLYcn0Z38MApnVgneZtd45qSe0MeaF
+        Fg9u2hKZEEDtU1zuj0Dl/hxXH3WkPxmxGs8GsYZ1qLE9kQmBCmvhUufAXy5MdxITPQ+pU/L/xVG2+rko
+        tv4GPL7NQcousepdAMWpAcrMWFXXBJp3hhR7V2RmSUvtZaSyLUjt7bTSLcbrFgHt7wDZzk8LqdQXRGK8
+        uuLj1+oAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnQuitarProducto.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAAp1JREFUOE+dVEtrU0EUvsY3uqkgrTV07kwuFEKpglCrLuJC/Af+BxeKraWldnNX
+        qXdmmlQhaauLdFnbulLE7goWFXcuRKGb0txXgg2t+APiOTeHkDSPFj8YmPudB/ec880xumFQ7vZzVRo2
+        ZZDCg3fkyHx88MzBiJjfT0OCFa6CAlfuoin9Bfgu8LnSishWZk29d5PcOyNlV09BwFOR3XsPCSeF8u/E
+        M8VLZDbwjpyVrUyhD9fBBMaQ+RAerJ1k0pNChetMedeJ7Qj0MZW/zqSvDXuzNWlCehPokFTlPqKORNLe
+        6TPhB/BPiaqBO8URrryNuK4MEWUY1eoJurWiwRbX4ZBQwYY561JP7WqMO65iyp2uETXceFU9Df0ag0Hc
+        I8pgjjsqlDvG7J1zREWANk3zqPRqzGC5ch98rJo6bJ6abccS2n/EVbhlpYPLw/r7Ba7DD0wH41FgAzAW
+        ermKuQwzU76G0hhYOOghex3Wy+2zXHpLoMFZCJjh2l+CSZ8ncx0Dz3d7TOkuYy7DTBdTpuMvkq0FAzM/
+        r4jc/pdE/u+nQftXR1GjTpkO70YJueqc8OrUdtzK/flm5Q+2+LOvvUS3wNQuJHQhIZYs/eV2JWN5Qnuv
+        hePZCeUrLt2FpP3jDJnriEpWfiEqufNQYPowAOjbx6S9eZEp1FzwWcjgIeimSVLM2RllioaC04SSQTZ+
+        k2ysxzAQ7Y4zVbpFlAF/cV9I/0nq0MvAWKYCVZ8+d0ISdvhfwsZYzEFUDVzT04PnRNSR4C9KvRiDsUQ1
+        YA2WA5QOJb097nIQOlyDHrdfDohofcFD77a+EnPl22K+MgnnHc+UuqyvBjQs2DdclgqwUfJ4uMRlCwsW
+        beBD7sfHoPzdj9rCF4AH78iRuQ0M4x8nlW07Aj5m5AAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
