--- a/Vistas/Compras/Pedidos/frmAMCPedido.resx
+++ b/Vistas/Compras/Pedidos/frmAMCPedido.resx
@@ -18,7 +18,7 @@
     <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
     <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
     <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing"">Blue</data>
     <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
         <value>[base64 mime encoded serialized .NET Framework object]</value>
     </data>
@@ -127,7 +127,7 @@
   <data name="btnQuitarProveedor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAAp1JREFUOE+dVEtrU0EUvsY3uqkgrTV07kwuFEKpglCrLuJC/Af+BxeKraWldnNX
+        DQAACw0B7QfALAAAAp1JREFUOE+dVEtrU0EUvsY3uqkgrTV07kwuFEKpglCrLuJC/Af+BxeKraWldnNX
         qXdmmlQhaauLdFnbulLE7goWFXcuRKGb0txXgg2t+APiOTeHkDSPFj8YmPudB/ec880xumFQ7vZzVRo2
         ZZDCg3fkyHx88MzBiJjfT0OCFa6CAlfuoin9Bfgu8LnSishWZk29d5PcOyNlV09BwFOR3XsPCSeF8u/E
         M8VLZDbwjpyVrUyhD9fBBMaQ+RAerJ1k0pNChetMedeJ7Qj0MZW/zqSvDXuzNWlCehPokFTlPqKORNLe
@@ -147,7 +147,7 @@
   <data name="btnConsultarProveedor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAAVdJREFUOE/tk01Kw0AYQOtKXLpVaeen03ajeABXRTyDeAvBlStXppkkbRqatFZc
+        DQAACw0B7QfALAAAAVdJREFUOE/tk01Kw0AYQOtKXLpVaeen03ajeABXRTyDeAvBlStXppkkbRqatFZc
         FHShB/Ea0jaTNFrrT9EqtY4JHYiFaALirg8eDJNvHkNgUt9Z279eyqisAGlvA0qd9SRm6M1mXm6viEQI
         0TqrWX1whasPr0jzJkj1xgn8IOYLhzKzRCYEyt1D0phwbAw5Lt9xXOnHqw947mTCkew0RSYESnaTmG8c
         Ka6vk0y1x4k54lBxI24oMSv4GAxFHo7ytyAqMXMejHcenOEfg8FLYcn0Z38MApnVgneZtd45qSe0MeaF
@@ -159,7 +159,7 @@
   <data name="btnAsignarProveedor.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAAedJREFUOE9jGDDwn+E/Y2j9KrbQVauYoUKUgZjundxhjXt8A+t3eHjkbmOHCpMP
+        DQAACw0B7QfALAAAAedJREFUOE9jGDDwn+E/Y2j9KrbQVauYoUKUgZjundxhjXt8A+t3eHjkbmOHCpMP
         knuPCcV0H+2P6zq+JbHzpA/ItVAp8kB0/Qm+zMnnuvLnXHuXP/vanoTOI14M9vUsUGnSgfHMmaxpU87W
         VK948K154+s/+XOv7oxsOeiuFUquS+3tWVInnqyuXfHow+RD//43rX/xO3fWlW1RLQc8tbTqEYbGtR8I
         TO8/mZox+UxBxrRzeRlTTmPiyWeygXRx/syLW+tXP/4yce/3/5P2//pfv+75r7w5l7dHtuxzNzaeyQo2
